<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="10dp"
        android:src="@mipmap/pet_top_img" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="2"
        android:layout_gravity="center">
        <Button
            android:drawableTop="@mipmap/sad0"
            android:background="@color/white"
            android:text="@string/sad0"
            android:padding="5dp"/>
        <Button
            android:drawableTop="@mipmap/sad1"
            android:background="@color/white"
            android:text="@string/sad1"
            android:padding="5dp"/>
        <Button
            android:drawableTop="@mipmap/sad2"
            android:background="@color/white"
            android:text="@string/sad2"
            android:padding="5dp"/>
        <Button
            android:drawableTop="@mipmap/sad3"
            android:background="@color/white"
            android:text="@string/sad3"
            android:padding="5dp"/>
        <Button
            android:drawableTop="@mipmap/sad4"
            android:background="@color/white"
            android:text="@string/sad4"
            android:padding="5dp"/>
        <Button
            android:drawableTop="@mipmap/sad5"
            android:background="@color/white"
            android:text="@string/sad5"
            android:padding="5dp"/>
        <Button
            android:drawableTop="@mipmap/sad6"
            android:background="@color/white"
            android:text="@string/sad6"
            android:padding="5dp"/>
        <Button
            android:drawableTop="@mipmap/sad7"
            android:background="@color/white"
            android:text="@string/sad7"
            android:padding="5dp"/>
    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <ListView
            android:id="@+id/suggest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pet_button"
            android:src="@mipmap/pet_button"
            android:padding="10dp"/>

    </FrameLayout>
</LinearLayout>