<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_test"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/search1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search1"
            android:drawableTop="@mipmap/distance_search"
            android:background="@color/floralwhite"
            android:padding="10dp"/>

        <Button
            android:id="@+id/search2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search2"
            android:drawableTop="@mipmap/fame_search"
            android:background="@color/floralwhite"
            android:padding="10dp"/>

        <Button
            android:id="@+id/search3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search3"
            android:drawableTop="@mipmap/hospital_search"
            android:background="@color/floralwhite"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/myDoctor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/myDoctor"
        android:gravity="center"
        android:textSize="30dp"
        android:background="@drawable/button_style"
        android:textColor="#ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:id="@+id/doctor_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />
</LinearLayout>