<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/friend_head"
        android:layout_width="@dimen/wechat_hdimg_layout"
        android:layout_height="@dimen/wechat_hdimg_layout"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/item_margin_left_10dp">


        <ImageView
            android:id="@+id/user_head_image"
            android:layout_width="@dimen/wechat_img_height"
            android:layout_gravity="center"
            android:layout_height="@dimen/wechat_img_height"
            android:layout_centerVertical="true"
            android:src="@drawable/head_image_1" />

        <TextView
            android:id="@+id/user_head_unread"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:textSize="@dimen/content_text_small"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:text="1"
            android:gravity="center"
            android:layout_gravity="right"
            android:background="@drawable/unread" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/wechat_img_height"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_img"
        android:layout_toRightOf="@+id/friend_head"
        android:orientation="vertical">

        <TextView
            android:id="@+id/friend_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:text="@string/friend_name"
            android:layout_marginTop="@dimen/margin"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/friend_lastmsg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/default_message"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/wechat_img_height"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/item_margin_left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/friend_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/default_time"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/content_text_14sp" />

    </LinearLayout>

</RelativeLayout>